--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "google-map-react": "^1.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
